# proharmed-backend

./: Dockerfile  README.md  asgi.py  docker-compose.arenal.yml  docker-compose.colima.yml  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  supervisord.conf  wsgi.py
.github/workflows/: docker-publish.yml
database/: apps.py  models.py
database/management/commands/: setup_mesidha.py  setup_proharmed.py
examples/: Drugstone.tsv  Filter-Calciolari_2017.csv  Filter-Schmidt_2016.csv  Filter-Schmidt_2018.csv  Intersect-Calciolari_2017.csv  Intersect-Dong_2020.csv  Intersect-Schmidt_2016.csv  Intersect-Schmidt_2018.csv  Ortholog-Calciolari_2017.csv  Ortholog-Dong_2020.csv  Reduce-Calciolari_2017.csv  Reduce-Schmidt_2016.csv  Reduce-Schmidt_2018.csv  Remap-Calciolari_2017.csv  Remap-Schmidt_2016.csv  Remap-Schmidt_2018.csv
mesidha_backend/: __init__.py  celery.py  cleaner.py  mailer.py  mesidha_executor.py  models.py  preparation.py  serializers.py  task.py  task_hook.py  updater.py  urls.py  versions.py  views.py
mesidha_backend/management/commands/: setup_mesidha.py
mesidha_backend/settings/: settings.py
mesidha_backend/tasks/: task_hook.py
proharmed_backend/: __init__.py  celery.py  cleaner.py  mailer.py  proharmed_executor.py  serializers.py  task.py  task_hook.py  urls.py  views.py
scripts/: start_app.sh  start_celery_beat.sh  start_celery_worker.sh
settings/: settings.py
