[tool.poetry]
name = "proharmed_backend"
version = "1.0.0"
description = ""
authors = ["andreas-maier <andreas.maier-1@uni-hamburg.de>"]
package-mode = false

[tool.poetry.dependencies]
python =  ">=3.9.2,<3.14"
django="^4.2.28"
djangorestframework="3.15.2"
djangorestframework-camel-case="1.3.0"
entrypoints="0.4"
requests="2.32.4"
gunicorn="23.0.0"  # Updated to fix HTTP Request Smuggling vulnerability
django-cors-headers="3.13.0"
pymemcache="4.0.0"
django_redis="5.2.0"
rq="1.11.1"
celery="5.2.7"  # Updated to ensure compatibility with updated cryptography package
sqlparse="^0.5.4" # Updated to fix vulnerability
tzdata="2025.3"
cryptography="^46.0.5"  # Added to fix Observable Timing Discrepancy vulnerability
certifi="2024.7.4"
idna="3.7"
urllib3="2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"